plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.training.demo.tribble'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.ORACLE
    }
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.h2database:h2'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '--enable-preview',
        '-Xlint:preview'
    ]
}

test {
    useJUnitPlatform()
    jvmArgs += [
        '--enable-preview'
    ]
}

bootRun {
    systemProperty 'spring.profiles.active', 'local'
    systemProperty 'spring.output.ansi.enabled', 'always'
    systemProperty 'spring.classformat.ignore', 'true'
    jvmArgs += [
        '--enable-preview'
    ]
}

springBoot {
    mainClass = 'com.training.demo.tribble.MobileShopApplication'
}
